--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "grunt-sed": "twbs/grunt-sed#v0.2.0",
     "load-grunt-tasks": "~3.2.0",
     "time-grunt": "~1.2.0"
+  },
+  "dependencies": {
+    "mddir": "^1.1.0"
   }
 }
